--- a/education.html
+++ b/education.html
@@ -68,9 +68,8 @@
               <dl class="about-text">
                 <dt>노하우 전달</dt>
                 <dd>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Inventore facilis nesciunt officiis aliquid hic fugiat magnam,
-                  repudiandae incidunt obcaecati! Totam.
+                  100억 강사와 함께하는 노하우를 <br />이제는 고객님에게
+                  고스란히 전달해드리겠습니다.
                 </dd>
               </dl>
               <figure>
@@ -81,9 +80,9 @@
               <dl class="about-text">
                 <dt>맞춤 마케팅</dt>
                 <dd>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Inventore facilis nesciunt officiis aliquid hic fugiat magnam,
-                  repudiandae incidunt obcaecati! Totam.
+                  로그분석 리포트, 타겟 고객 발굴, 오프라인 광고연결,
+                  <br />새로운 매체 탐구 등 맞춤 마케팅을 제공하여<br />
+                  주 서비스 외에 다양한 부가 서비스를 가져가세요.
                 </dd>
               </dl>
               <figure>
@@ -94,9 +93,9 @@
               <dl class="about-text">
                 <dt>온라인 시장 공략</dt>
                 <dd>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Inventore facilis nesciunt officiis aliquid hic fugiat magnam,
-                  repudiandae incidunt obcaecati! Totam.
+                  온라인 시장 적극공략! <br />인터넷 쇼핑몰 운영에 필수적인
+                  포토샵, 사진 실습 부터 <br />재무, 세무, 노무법률에 이르기까지
+                  완벽한 노하우를 알려드립니다.
                 </dd>
               </dl>
               <figure>
@@ -107,9 +106,8 @@
               <dl class="about-text">
                 <dt>체계적인 수강</dt>
                 <dd>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Inventore facilis nesciunt officiis aliquid hic fugiat magnam,
-                  repudiandae incidunt obcaecati! Totam.
+                  온라인마케팅 A to Z. 온라인에 맞는 <br />운영방법 부터 내
+                  브랜딩 전략까지, <br />쳬계적인 수강으로 배우실 수 있습니다.
                 </dd>
               </dl>
               <figure>
@@ -120,148 +118,222 @@
         </div>
       </section>
 
-      <section class="service">
+      <section class="keyword">
+        <h3>수업에서 알려드립니다</h3>
         <div class="inner">
-          <div class="sev-con">
-            <a href="#" class="service-btn">문의하기</a>
-            <dl>
-              <dt>무엇이든 편하게 문의하세요.</dt>
-              <dd>창공연구소</dd>
-            </dl>
-          </div>
-        </div>
-      </section>
-
-      <section class="curriculum">
-        <div class="inner">
-          <h3>커리큘럼</h3>
-
-          <div class="curriculum-wrapper">
-            <div class="swiper curriculum-swiper">
-              <div class="swiper-wrapper">
+          <div class="keyword-wrapper">
+            <div class="swiper keyword-swiper">
+              <div class="swiper-wrapper keyword-con">
                 <!-- Slides -->
                 <div class="swiper-slide">
-                  <figure><img src="./img/curriculum-1.png" alt="#" /></figure>
+                  <figure><img src="./img/keyword-1.png" alt="#" /></figure>
                   <dl>
-                    <dt>카페24, 스마트스토어, <br />메타버스, 빅데이터분석</dt>
+                    <dt>카페24, 스마트스토어, 메타버스, 빅데이터분석</dt>
                     <dd>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Mollitia, totam!
+                      2004년부터 현재까지 모든 온라인 쇼핑몰 채널에 대한
+                      솔루션을 제공합니다. 카페24와 스마트스토어에 최적화된
+                      솔루션을 제공합니다. 2014년 우수멘토상, 2015년 서울시
+                      이커머스 컨설턴트, 2016년 이커머스 최고멘토상, 2017년
+                      이커머스 최고멘토상의 경력 등 국내외 인정받은 마케팅
+                      노하우를 이제는 고객님에게 고스란히 전달해 드리겠습니다.
                     </dd>
                   </dl>
                 </div>
                 <div class="swiper-slide">
-                  <figure><img src="./img/curriculum-1.png" alt="#" /></figure>
+                  <figure><img src="./img/keyword-2.png" alt="#" /></figure>
                   <dl>
                     <dt>온라인 마케팅</dt>
                     <dd>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Mollitia, totam!
+                      CJ E&M, 현대백화점 그룹, 경기콘텐츠진흥원,
+                      (사)인천벤처기업협회 등 현재 유수의 기업들에게 이커머스
+                      마케팅 교육을 하고 있으며, 자체 개발한 빅데이터 분석기와
+                      DATA LAB 분석과 함께 디지털 마케팅에 최적화된 기술력을
+                      보유하고 있습니다. 또한 네이버 블로그, FACEBOOK에 최적화된
+                      마케팅 전략을 가지고 있습니다.
                     </dd>
                   </dl>
                 </div>
                 <div class="swiper-slide">
-                  <figure><img src="./img/curriculum-1.png" alt="#" /></figure>
+                  <figure><img src="./img/keyword-3.png" alt="#" /></figure>
                   <dl>
                     <dt>브랜딩, 성공사례</dt>
                     <dd>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Mollitia, totam!
+                      브랜딩화가 어렵다고 합니다. 내 수익을 100배 올려주는
+                      브랜드 매니지먼트 전략을 알려드립니다. 최근의 여러 성공
+                      사례를 고객에게 진심을 언어 수 있는 브랜드까지 소통을 통한
+                      방향성도 알려드립니다. 방향성만 맞다면 실패하지 않을 수
+                      있습니다.
                     </dd>
                   </dl>
                 </div>
                 <div class="swiper-slide">
-                  <figure><img src="./img/curriculum-1.png" alt="#" /></figure>
+                  <figure><img src="./img/keyword-4.png" alt="#" /></figure>
                   <dl>
                     <dt>모바일 최적화 쇼핑몰</dt>
                     <dd>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Mollitia, totam!
+                      모바일 온리 시대! O2O(Online to Offline)와 모바일 솔루션!
+                      동영상 마케팅 등 최적화된 쇼핑몰을 만들어드립니다.
                     </dd>
                   </dl>
                 </div>
                 <div class="swiper-slide">
-                  <figure><img src="./img/curriculum-1.png" alt="#" /></figure>
+                  <figure><img src="./img/keyword-5.png" alt="#" /></figure>
                   <dl>
                     <dt>이커머스 운영전략, <br />빅데이터 분석, 로그 분석</dt>
                     <dd>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Mollitia, totam!
+                      마케팅보다 브랜드보다 운영이 중요하다. 실제 노하우를
+                      바탕으로 알려주는 내 쇼핑몰 운영 노하우 전략!
                     </dd>
                   </dl>
                 </div>
               </div>
-
-              <div class="curriculum-pagination swiper-pagination"></div>
             </div>
-            <div class="curriculum-button-prev swiper-button-prev-1">
+
+            <div class="keyword-pagination swiper-pagination"></div>
+            <div class="keyword-button-prev swiper-button-prev-1">
               <i class="hidden">이전</i>
             </div>
-            <div class="curriculum-button-next swiper-button-next-1">
+            <div class="keyword-button-next swiper-button-next-1">
               <i class="hidden">다음</i>
             </div>
           </div>
         </div>
       </section>
 
-      <section class="keyword">
-        <div class="keyword-wrapper">
-          <div class="swiper keyword-swiper">
-            <div class="swiper-wrapper keyword-con">
+      <section class="curriculum">
+        <h3>커리큘럼</h3>
+
+        <div class="curriculum-wrapper">
+          <div class="swiper curriculum-swiper">
+            <div class="swiper-wrapper">
               <!-- Slides -->
               <div class="swiper-slide">
                 <figure><img src="./img/curriculum-1.png" alt="#" /></figure>
                 <dl>
-                  <dt>카페24, 스마트스토어, <br />메타버스, 빅데이터분석</dt>
+                  <dt>창업완성</dt>
                   <dd>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Mollitia, totam!
+                    100억 강사와 함께하는 온라인 창업 종합반(창공연구소) 온라인
+                    이커머스 종합반 과정으로 이전 기수들과 밴드 소통으로 더욱
+                    성공에 가까워집니다.
                   </dd>
                 </dl>
               </div>
               <div class="swiper-slide">
-                <figure><img src="./img/curriculum-1.png" alt="#" /></figure>
+                <figure><img src="./img/curriculum-2.png" alt="#" /></figure>
                 <dl>
-                  <dt>온라인 마케팅</dt>
+                  <dt>아이템소싱</dt>
                   <dd>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Mollitia, totam!
+                    연매출 100억의 비밀, 아이템 소싱이 있다. 온라인 소싱 전략과
+                    빅데이터 분석!
                   </dd>
                 </dl>
               </div>
               <div class="swiper-slide">
-                <figure><img src="./img/curriculum-1.png" alt="#" /></figure>
+                <figure><img src="./img/curriculum-3.png" alt="#" /></figure>
                 <dl>
-                  <dt>브랜딩, 성공사례</dt>
+                  <dt>창업준비</dt>
                   <dd>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Mollitia, totam!
+                    당신이 꼭 알아야 할 과거와 현재 온라인 트렌드와 온라인
+                    쇼핑몰 성공의 룰(RULE)!
                   </dd>
                 </dl>
               </div>
               <div class="swiper-slide">
-                <figure><img src="./img/curriculum-1.png" alt="#" /></figure>
+                <figure><img src="./img/curriculum-4.png" alt="#" /></figure>
                 <dl>
-                  <dt>모바일 최적화 쇼핑몰</dt>
+                  <dt>광고 (이커머스)</dt>
                   <dd>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Mollitia, totam!
+                    응답하라 키워드.광고 실전 교육: 성공 CEO의 숙성 키워드
+                    노하우! 직접 하나하나 알려주는 키워드 광고 강의!
                   </dd>
                 </dl>
               </div>
               <div class="swiper-slide">
-                <figure><img src="./img/curriculum-1.png" alt="#" /></figure>
+                <figure><img src="./img/curriculum-5.png" alt="#" /></figure>
                 <dl>
-                  <dt>이커머스 운영전략, <br />빅데이터 분석, 로그 분석</dt>
+                  <dt>해외</dt>
                   <dd>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Mollitia, totam!
+                    70억 인구에 팔아보자! 재고없이 해외오픈마켓 창업! 영어
+                    한마디 못해도 전세계에 팔 수 있다.
+                  </dd>
+                </dl>
+              </div>
+              <div class="swiper-slide">
+                <figure><img src="./img/curriculum-6.png" alt="#" /></figure>
+                <dl>
+                  <dt>운영</dt>
+                  <dd>
+                    내 쇼핑몰 매출 100배 올리는 스페셜 노하우 & 파워 리텐션
+                    전략!
+                  </dd>
+                </dl>
+              </div>
+              <div class="swiper-slide">
+                <figure><img src="./img/curriculum-7.png" alt="#" /></figure>
+                <dl>
+                  <dt>촬영</dt>
+                  <dd>
+                    사진 프로가 알려주는 카메라의 시작부터 촬영의 실전! 앞
+                    사진과 교실장이 알려주는 사진 강좌로 초보도 쉽게 접근이
+                    가능한 카메라 기본 강좌입니다.
+                  </dd>
+                </dl>
+              </div>
+              <div class="swiper-slide">
+                <figure><img src="./img/curriculum-8.png" alt="#" /></figure>
+                <dl>
+                  <dt>브랜드</dt>
+                  <dd>
+                    개인몰로 살아남기! 내 몰(MALL)의 브랜드 전략! 택배기사부터
+                    동대문 알바까지! 지금은 성공가도를 달리는 CEO가 브랜드에
+                    가치에 대해 알려드립니다.
+                  </dd>
+                </dl>
+              </div>
+              <div class="swiper-slide">
+                <figure><img src="./img/curriculum-9.png" alt="#" /></figure>
+                <dl>
+                  <dt>SNS</dt>
+                  <dd>
+                    마케팅 전문가가 말하는 이커머스 사업자를 위한 페이스북
+                    활용법.
+                  </dd>
+                </dl>
+              </div>
+              <div class="swiper-slide">
+                <figure><img src="./img/curriculum-10.png" alt="#" /></figure>
+                <dl>
+                  <dt>쇼핑몰구축</dt>
+                  <dd>
+                    100억 강사의 노하우로 알려주는 상품등록 cafe24 솔루션
+                    마스터.
+                  </dd>
+                </dl>
+              </div>
+              <div class="swiper-slide">
+                <figure><img src="./img/curriculum-11.png" alt="#" /></figure>
+                <dl>
+                  <dt>사이트제작</dt>
+                  <dd>
+                    포토샵 기초와 팔리는 상품에 최적화된 상세페이지 제작 실전!
+                    디자인쟁이의 포토샵 노하우! 쉽게 배우는 포토샵
+                    기초강좌입니다.
+                  </dd>
+                </dl>
+              </div>
+              <div class="swiper-slide">
+                <figure><img src="./img/curriculum-12.png" alt="#" /></figure>
+                <dl>
+                  <dt>오픈마켓</dt>
+                  <dd>
+                    100억 강사가 들려주는 판매 채널 확장, 오픈마켓 온라인
+                    대박전략!
                   </dd>
                 </dl>
               </div>
             </div>
 
-            <div class="keyword-pagination swiper-pagination"></div>
+            <div class="curriculum-pagination swiper-pagination"></div>
           </div>
         </div>
       </section>
@@ -295,6 +367,20 @@
                 class="airtable-embed"
               ></iframe>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="service">
+        <div class="inner">
+          <div class="sev-con">
+            <a href="https://cglab.channel.io/home" class="service-btn"
+              >문의하기</a
+            >
+            <dl>
+              <dt>무엇이든 편하게 문의하세요.</dt>
+              <dd>창공연구소</dd>
+            </dl>
           </div>
         </div>
       </section>
