--- a/about.html
+++ b/about.html
@@ -60,9 +60,9 @@
               <dl class="about-text">
                 <dt>실제 전문가 그룹</dt>
                 <dd>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Inventore facilis nesciunt officiis aliquid hic fugiat magnam,
-                  repudiandae incidunt obcaecati! Totam.
+                  창공연구소의 강사님들은 실제 오픈마켓, 쇼핑몰 등을
+                  <br />운영하는 전문가들로 이루어져 있습니다. <br />창업 성공을
+                  연결하고 연구하는 곳입니다.
                 </dd>
               </dl>
               <figure>
@@ -73,9 +73,9 @@
               <dl class="about-text">
                 <dt>체계적인 커리큘럼 및 전자 자격증 획득까지</dt>
                 <dd>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Inventore facilis nesciunt officiis aliquid hic fugiat magnam,
-                  repudiandae incidunt obcaecati! Totam.
+                  사진촬영, 마케팅 리텐션까지 <br />여기저기 다닐 필요없이
+                  체계적으로 시작할 수 있습니다.<br />
+                  교육 이수만으로 전자상거래 수출마스터 2급자격증을 획득합니다.
                 </dd>
               </dl>
               <figure>
@@ -86,9 +86,9 @@
               <dl class="about-text">
                 <dt>신뢰와 믿음으로 시작</dt>
                 <dd>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Inventore facilis nesciunt officiis aliquid hic fugiat magnam,
-                  repudiandae incidunt obcaecati! Totam.
+                  창공연구소의 모든 강의는 과장 하지 않는 <br />100% REAL 강의
+                  입니다.<br />
+                  교육과 함께 하는 토크콘서트와 MT까지!
                 </dd>
               </dl>
               <figure>
