--- a/analytics.html
+++ b/analytics.html
@@ -54,8 +54,9 @@
         <div class="visual-text">
           <h2>ANALYTICS</h2>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime,
-            at.
+            빅데이터를 분석하는 기술 전반을 통해 다양한 고객 행동을 분석하고
+            예측할 수 있습니다. 데이터의 유의미한 패턴을 발견하여 의사결정에
+            활용하며, 기록된 정보가 풍부한 분야에서 가치를 가집니다.
           </p>
         </div>
         <figure><img src="./img/visual-6-1.jpg" alt="#" /></figure>
