--- a/design.html
+++ b/design.html
@@ -54,8 +54,9 @@
         <div class="visual-text">
           <h2>DESIGN</h2>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime,
-            at.
+            쇼핑몰 구축부터 상세페이지 디자인까지 한 번에 해결하는 토탈 서비스와
+            브랜드 맞춤형 디자인을 제공합니다. 공장에서 찍어낸 듯한 디자인이
+            아닌, 최적의 비용으로 전문 서비스를 선사합니다.
           </p>
         </div>
         <figure><img src="./img/visual-4-1.jpg" alt="#" /></figure>
@@ -81,7 +82,11 @@
         <div class="inner">
           <div class="price-title">
             <h3>견적 안내</h3>
-            <p>Lorem ipsum dolor sit amet.</p>
+            <p>
+              한건부터 대량까지 다양하게 의뢰가 가능합니다. <br />모델촬영,
+              컨셉촬영, 영상촬영 등 특수한 상황의 촬영건은 따로 문의 주시길
+              바라며 비용은 조건에 따라 달라질 수 있습니다.
+            </p>
           </div>
 
           <div class="price-all">
