--- a/index.html
+++ b/index.html
@@ -75,13 +75,12 @@
               <div class="education-text">
                 <strong>온라인 쇼핑몰 성공 가이드</strong>
                 <p>
-                  온라인 쇼핑몰을 처음하시는 분들 부터 이미 하시면서 방향성을
-                  <br />
-                  잃으신 분들까지 실제 온라인 쇼핑몰 CEO들의 노하우 <br />방향을
-                  잡아드립니다.
+                  온라인 쇼핑몰을 처음 하시는 분들부터 <br />이미 하시면서
+                  방향성을 잃으신 분들까지 <br />실제 온라인 쇼핑몰 CEO들의
+                  노하우 방향을 잡아드립니다.
                 </p>
               </div>
-              <a href="" class="more">더보러 가기</a>
+              <a href="./education.html" class="more">더 보러 가기</a>
             </div>
             <figure>
               <img src="./img/education.jpg" alt="#" />
@@ -119,9 +118,10 @@
             <li>
               <a href="#">
                 <dl>
-                  <dt>ANALLYTICS</dt>
-                  <dd>빅데이터를 분석하고 예측하며 중요한 정보 파악</dd>
+                  <dt>ANALYTICS</dt>
+                  <dd>빅데이터 / 디지털 마케팅 / 데이터 패턴</dd>
                 </dl>
+                <p>빅데이터를 분석하고 예측하며 중요한 정보 파악</p>
               </a>
             </li>
           </ul>
