--- a/marketing.html
+++ b/marketing.html
@@ -54,8 +54,9 @@
         <div class="visual-text">
           <h2>MARKETING</h2>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime,
-            at.
+            온라인 마케팅은 전문적이고 체계적인 접근이 필요하며, 키워드 광고와
+            SNS 광고를 통해 효율적인 방법으로 매출 효과를 높입니다. 고객 맞춤형
+            광고 전략으로 최고의 마케팅 효과를 약속드립니다.
           </p>
         </div>
         <figure><img src="./img/visual-5-1.jpg" alt="#" /></figure>
@@ -89,9 +90,7 @@
                 브랜드에 맞는 최대한의 효과를 <br />연구하고 만들어 갑니다
               </h4>
             </div>
-            <a
-              href="https://www.sisul.or.kr/open_content/traffic/bike_course/index.html"
-              class="c-more-btn"
+            <a href="https://cglab.channel.io/home" class="c-more-btn"
               >문의하기</a
             >
           </div>
@@ -105,31 +104,42 @@
           <ul class="question-list">
             <li>
               <strong>키워드 광고</strong>
+              <p>
+                네이버, 구글 등 인터넷 포털 키워드 광고로 국내 고객을 사로 잡을
+                수 있습니다.
+              </p>
               <div class="answer-wrap">
                 <p>
-                  Lorem ipsum dolor sit am et consectetur adipisicing elit.
-                  Mollitia eius earum fugiat dolor deserunt explicabo voluptate
-                  reprehenderit dolore, ipsa quia.
+                  네이버 검색광고를 1순위로 하며, 네이버는 국내 검색점유율의 70%
+                  이상을 차지하고 있어 가장 효과적인 검색광고 시장으로
+                  검색광고를 통해 사이트를 효과적으로 홍보할 수 있습니다.
                 </p>
               </div>
             </li>
             <li>
               <strong> SNS광고</strong>
+              <p>SNS는 선택이 아닌 필수 입니다.</p>
               <div class="answer-wrap">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Mollitia eius earum fugiat dolor deserunt explicabo voluptate
-                  reprehenderit dolore, ipsa quia.
+                  인스타, 블로그, 페이스북 등 2030, 40대 많은 사람들이 많은
+                  시간을 소비하는 SNS는 로그인 기반으로 정확한 타겟을 찾아 광고
+                  전달이 효율적으로 전달할 수 있는 매체입니다. 브랜드 인지도
+                  향상효과와 정확한 타겟팅을 통한 소통과 홍보 합리적인 광고
+                  비용에 비해 효과가 커질 수 있습니다.
                 </p>
               </div>
             </li>
             <li>
               <strong>쇼핑 광고</strong>
+              <p>
+                사이트와 쇼핑몰 간의 편리한 연결을 위해 상품검색, 카테고리 분류,
+                가격 비교 쇼핑 컨텐츠 등을 제공하는 서비스 입니다.
+              </p>
               <div class="answer-wrap">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Mollitia eius earum fugiat dolor deserunt explicabo voluptate
-                  reprehenderit dolore, ipsa quia.
+                  네이버, 다음 등 다양한 입점 형태로 쇼핑몰에 따른 적합한 광고
+                  형태와 등록 등 효율적인 연결을 통해 고객들의 유입과 잠재 고객
+                  확보 등 매출 증대 효과를 동시에 누릴 수 있습니다.
                 </p>
               </div>
             </li>
