--- a/design.html
+++ b/design.html
@@ -144,25 +144,25 @@
                 <li class="swiper-slide portfolio-item">
                   <a href="#">
                     <figure><img src="./img/about-1.jpg" alt="" /></figure>
-                    <strong>쇼핑몰 디자인</strong>
+                    <strong>상세 페이지</strong>
                   </a>
                 </li>
                 <li class="swiper-slide portfolio-item">
                   <a href="#">
                     <figure><img src="./img/about-1.jpg" alt="" /></figure>
-                    <strong>쇼핑몰 디자인</strong>
+                    <strong>배너 디자인</strong>
                   </a>
                 </li>
                 <li class="swiper-slide portfolio-item">
                   <a href="#">
                     <figure><img src="./img/about-1.jpg" alt="" /></figure>
-                    <strong>쇼핑몰 디자인</strong>
+                    <strong>사진촬영</strong>
                   </a>
                 </li>
                 <li class="swiper-slide portfolio-item">
                   <a href="#">
                     <figure><img src="./img/about-1.jpg" alt="" /></figure>
-                    <strong>쇼핑몰 디자인</strong>
+                    <strong>웹사이트 디자인</strong>
                   </a>
                 </li>
               </ul>
@@ -178,37 +178,25 @@
                   <li class="swiper-slide portfolio-item">
                     <a href="#">
                       <figure><img src="./img/about-2.jpg" alt="" /></figure>
-                      <strong>쇼핑몰 디자인</strong>
+                      <strong>상세 페이지</strong>
                     </a>
                   </li>
                   <li class="swiper-slide portfolio-item">
                     <a href="#">
                       <figure><img src="./img/about-2.jpg" alt="" /></figure>
-                      <strong>쇼핑몰 디자인</strong>
+                      <strong>배너 디자인</strong>
                     </a>
                   </li>
                   <li class="swiper-slide portfolio-item">
                     <a href="#">
                       <figure><img src="./img/about-2.jpg" alt="" /></figure>
-                      <strong>쇼핑몰 디자인</strong>
+                      <strong>사진촬영</strong>
                     </a>
                   </li>
                   <li class="swiper-slide portfolio-item">
                     <a href="#">
                       <figure><img src="./img/about-2.jpg" alt="" /></figure>
-                      <strong>쇼핑몰 디자인</strong>
-                    </a>
-                  </li>
-                  <li class="swiper-slide portfolio-item">
-                    <a href="#">
-                      <figure><img src="./img/about-2.jpg" alt="" /></figure>
-                      <strong>쇼핑몰 디자인</strong>
-                    </a>
-                  </li>
-                  <li class="swiper-slide portfolio-item">
-                    <a href="#">
-                      <figure><img src="./img/about-2.jpg" alt="" /></figure>
-                      <strong>쇼핑몰 디자인</strong>
+                      <strong>웹사이트 디자인</strong>
                     </a>
                   </li>
                 </ul>
