--- a/education.html
+++ b/education.html
@@ -119,14 +119,14 @@
       </section>
 
       <section class="keyword">
-        <h3>수업에서 알려드립니다</h3>
+        <h3>수업내용</h3>
         <div class="inner">
           <div class="keyword-wrapper">
             <div class="swiper keyword-swiper">
               <div class="swiper-wrapper keyword-con">
                 <!-- Slides -->
                 <div class="swiper-slide">
-                  <figure><img src="./img/keyword-1.png" alt="#" /></figure>
+                  <figure><img src="./img/keyword-1.svg" alt="#" /></figure>
                   <dl>
                     <dt>카페24, 스마트스토어, 메타버스, 빅데이터분석</dt>
                     <dd>
@@ -140,7 +140,7 @@
                   </dl>
                 </div>
                 <div class="swiper-slide">
-                  <figure><img src="./img/keyword-2.png" alt="#" /></figure>
+                  <figure><img src="./img/curriculum-3.svg" alt="#" /></figure>
                   <dl>
                     <dt>온라인 마케팅</dt>
                     <dd>
@@ -154,7 +154,7 @@
                   </dl>
                 </div>
                 <div class="swiper-slide">
-                  <figure><img src="./img/keyword-3.png" alt="#" /></figure>
+                  <figure><img src="./img/curriculum-8.svg" alt="#" /></figure>
                   <dl>
                     <dt>브랜딩, 성공사례</dt>
                     <dd>
@@ -167,7 +167,7 @@
                   </dl>
                 </div>
                 <div class="swiper-slide">
-                  <figure><img src="./img/keyword-4.png" alt="#" /></figure>
+                  <figure><img src="./img/curriculum-6.svg" alt="#" /></figure>
                   <dl>
                     <dt>모바일 최적화 쇼핑몰</dt>
                     <dd>
@@ -177,7 +177,7 @@
                   </dl>
                 </div>
                 <div class="swiper-slide">
-                  <figure><img src="./img/keyword-5.png" alt="#" /></figure>
+                  <figure><img src="./img/curriculum-11.svg" alt="#" /></figure>
                   <dl>
                     <dt>이커머스 운영전략, <br />빅데이터 분석, 로그 분석</dt>
                     <dd>
@@ -208,7 +208,7 @@
             <div class="swiper-wrapper">
               <!-- Slides -->
               <div class="swiper-slide">
-                <figure><img src="./img/curriculum-1.png" alt="#" /></figure>
+                <figure><img src="./img/curriculum-1.svg" alt="#" /></figure>
                 <dl>
                   <dt>창업완성</dt>
                   <dd>
@@ -219,7 +219,7 @@
                 </dl>
               </div>
               <div class="swiper-slide">
-                <figure><img src="./img/curriculum-2.png" alt="#" /></figure>
+                <figure><img src="./img/curriculum-2.svg" alt="#" /></figure>
                 <dl>
                   <dt>아이템소싱</dt>
                   <dd>
@@ -229,7 +229,7 @@
                 </dl>
               </div>
               <div class="swiper-slide">
-                <figure><img src="./img/curriculum-3.png" alt="#" /></figure>
+                <figure><img src="./img/curriculum-3.svg" alt="#" /></figure>
                 <dl>
                   <dt>창업준비</dt>
                   <dd>
@@ -239,7 +239,7 @@
                 </dl>
               </div>
               <div class="swiper-slide">
-                <figure><img src="./img/curriculum-4.png" alt="#" /></figure>
+                <figure><img src="./img/curriculum-4.svg" alt="#" /></figure>
                 <dl>
                   <dt>광고 (이커머스)</dt>
                   <dd>
@@ -249,7 +249,7 @@
                 </dl>
               </div>
               <div class="swiper-slide">
-                <figure><img src="./img/curriculum-5.png" alt="#" /></figure>
+                <figure><img src="./img/curriculum-5.svg" alt="#" /></figure>
                 <dl>
                   <dt>해외</dt>
                   <dd>
@@ -259,7 +259,7 @@
                 </dl>
               </div>
               <div class="swiper-slide">
-                <figure><img src="./img/curriculum-6.png" alt="#" /></figure>
+                <figure><img src="./img/curriculum-6.svg" alt="#" /></figure>
                 <dl>
                   <dt>운영</dt>
                   <dd>
@@ -269,7 +269,7 @@
                 </dl>
               </div>
               <div class="swiper-slide">
-                <figure><img src="./img/curriculum-7.png" alt="#" /></figure>
+                <figure><img src="./img/curriculum-7.svg" alt="#" /></figure>
                 <dl>
                   <dt>촬영</dt>
                   <dd>
@@ -280,7 +280,7 @@
                 </dl>
               </div>
               <div class="swiper-slide">
-                <figure><img src="./img/curriculum-8.png" alt="#" /></figure>
+                <figure><img src="./img/curriculum-8.svg" alt="#" /></figure>
                 <dl>
                   <dt>브랜드</dt>
                   <dd>
@@ -291,7 +291,7 @@
                 </dl>
               </div>
               <div class="swiper-slide">
-                <figure><img src="./img/curriculum-9.png" alt="#" /></figure>
+                <figure><img src="./img/curriculum-9.svg" alt="#" /></figure>
                 <dl>
                   <dt>SNS</dt>
                   <dd>
@@ -301,7 +301,7 @@
                 </dl>
               </div>
               <div class="swiper-slide">
-                <figure><img src="./img/curriculum-10.png" alt="#" /></figure>
+                <figure><img src="./img/curriculum-10.svg" alt="#" /></figure>
                 <dl>
                   <dt>쇼핑몰구축</dt>
                   <dd>
@@ -311,7 +311,7 @@
                 </dl>
               </div>
               <div class="swiper-slide">
-                <figure><img src="./img/curriculum-11.png" alt="#" /></figure>
+                <figure><img src="./img/curriculum-11.svg" alt="#" /></figure>
                 <dl>
                   <dt>사이트제작</dt>
                   <dd>
@@ -322,7 +322,7 @@
                 </dl>
               </div>
               <div class="swiper-slide">
-                <figure><img src="./img/curriculum-12.png" alt="#" /></figure>
+                <figure><img src="./img/curriculum-12.svg" alt="#" /></figure>
                 <dl>
                   <dt>오픈마켓</dt>
                   <dd>
