모바일 헤더

--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
     <script src="./js/script.js"></script>
   </head>
   <body>
+    <!-- 모바일용 메뉴 -->
+    <div class="mobile-menu">
+      <strong class="mobile-logo"> <i class="hidden">창공연구소</i></strong>
+      <ul class="mobile-gnb">
+        <li><a href="./index.html">HOME</a></li>
+        <li><a href="./about.html">ABOUT</a></li>
+        <li><a href="./education.html">EDUCATION</a></li>
+        <li><a href="./design.html">DESIGN</a></li>
+        <li><a href="./analytics.html">ANALYTICS</a></li>
+      </ul>
+      <button class="mobile-btn-close"><i class="hidden">닫기</i></button>
+    </div>
+    <!-- 모바일용 메뉴 end -->
+
     <header id="header">
       <div class="inner">
         <nav>
@@ -34,13 +48,9 @@
               <li><a href="./marketing.html">MARKETING</a></li>
               <li><a href="./analytics.html">ANALYTICS</a></li>
             </ul>
-            <div class="join-btn">
-              <a href="#"><i class="hidden">검색</i></a>
-              <a href="#"><i class="hidden">로그인</i></a>
-              <a href="#"><i class="hidden">쇼핑</i></a>
-            </div>
-            <div class="mo-btn">
-              <a href=""><i class="hidden">더보기</i></a>
+
+            <div class="more-btn">
+              <a href="#"><i class="hidden">더보기</i></a>
             </div>
           </div>
         </nav>
