--- a/about.html
+++ b/about.html
@@ -8,8 +8,25 @@
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/sub-common.css" />
     <link rel="stylesheet" href="./css/about.css" />
+
+    <script src="./js/jquery-3.7.1.min.js"></script>
+    <script src="./js/script.js"></script>
   </head>
   <body>
+    <!-- 모바일용 메뉴 -->
+    <div class="mobile-menu">
+      <strong class="mobile-logo"> <i class="hidden">창공연구소</i></strong>
+      <ul class="mobile-gnb">
+        <li><a href="./index.html">HOME</a></li>
+        <li><a href="./about.html">ABOUT</a></li>
+        <li><a href="./education.html">EDUCATION</a></li>
+        <li><a href="./design.html">DESIGN</a></li>
+        <li><a href="./analytics.html">ANALYTICS</a></li>
+      </ul>
+      <button class="mobile-btn-close"><i class="hidden">닫기</i></button>
+    </div>
+    <!-- 모바일용 메뉴 end -->
+
     <header id="header">
       <div class="inner">
         <nav>
@@ -27,13 +44,9 @@
               <li><a href="./marketing.html">MARKETING</a></li>
               <li><a href="./analytics.html">ANALYTICS</a></li>
             </ul>
-            <div class="join-btn">
-              <a href="#"><i class="hidden">검색</i></a>
-              <a href="#"><i class="hidden">로그인</i></a>
-              <a href="#"><i class="hidden">쇼핑</i></a>
-            </div>
-            <div class="mo-btn">
-              <a href=""><i class="hidden">더보기</i></a>
+
+            <div class="more-btn">
+              <a href="#"><i class="hidden">더보기</i></a>
             </div>
           </div>
         </nav>
@@ -131,7 +144,6 @@
                   mapWidth: "900",
                   mapHeight: "550",
                 }).render();
-                window.addEventListener("resize", resizeMap);
               </script>
             </div>
           </div>
