--- a/design.html
+++ b/design.html
@@ -21,12 +21,12 @@
   <body>
     <!-- 모바일용 메뉴 -->
     <div class="mobile-menu">
-      <strong class="mobile-logo"> <i class="hidden">창공연구소</i></strong>
       <ul class="mobile-gnb">
         <li><a href="./index.html">HOME</a></li>
         <li><a href="./about.html">ABOUT</a></li>
         <li><a href="./education.html">EDUCATION</a></li>
         <li><a href="./design.html">DESIGN</a></li>
+        <li><a href="./marketing.html">MARKETING</a></li>
         <li><a href="./analytics.html">ANALYTICS</a></li>
       </ul>
       <button class="mobile-btn-close"><i class="hidden">닫기</i></button>
