--- a/index.html
+++ b/index.html
@@ -63,11 +63,15 @@
           <div class="swiper-wrapper visual-wrapper">
             <!-- Slides -->
             <div class="swiper-slide">
-              <figure><img src="./img/visual.jpg" alt="#" /></figure>
+              <a href="./education.html">
+                <figure><img src="./img/visual.jpg" alt="#" /></figure>
+              </a>
             </div>
 
             <div class="swiper-slide">
-              <figure><img src="./img/visual-1.jpg" alt="#" /></figure>
+              <a href="./design.html">
+                <figure><img src="./img/visual-1.jpg" alt="#" /></figure>
+              </a>
             </div>
           </div>
         </div>
